fix(language toggle): align toggle in mobile.

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -5097,6 +5097,7 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
   display: flex;
   flex-direction: row;
   text-align: left;
+  align-items: center;
 }
 .interface-english .rightButtons,
 .interface-hebrew .leftButtons {
